<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jwu5.habittracker.HabitActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_habit_title"
        android:padding="20dp"
        />

    <EditText android:id="@+id/habit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/habit_title_hint" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_habit_description"
        android:padding="20dp"
        />

    <EditText android:id="@+id/habit_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/habit_description_hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_weight="0.5"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp">

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/toggle_sun_text"
            android:textOn="@string/toggle_sun_text"
            android:layout_weight="1"
            android:id="@+id/toggle_sun"
            android:textSize="10sp" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/toggle_mon_text"
            android:textOn="@string/toggle_mon_text"
            android:layout_weight="1"
            android:id="@+id/toggle_mon"
            android:textSize="10sp" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/toggle_tue_text"
            android:textOn="@string/toggle_tue_text"
            android:layout_weight="1"
            android:id="@+id/toggle_tue"
            android:textSize="10sp" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/toggle_wed_text"
            android:textOn="@string/toggle_wed_text"
            android:layout_weight="1"
            android:id="@+id/toggle_wed"
            android:textSize="10sp" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/toggle_thu_text"
            android:textOn="@string/toggle_thu_text"
            android:layout_weight="1"
            android:id="@+id/toggle_thu"
            android:textSize="10sp" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/toggle_fri_text"
            android:textOn="@string/toggle_fri_text"
            android:layout_weight="1"
            android:id="@+id/toggle_fri"
            android:textSize="10sp" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/toggle_sat_text"
            android:textOn="@string/toggle_sat_text"
            android:layout_weight="1"
            android:id="@+id/toggle_sat"
            android:textSize="10sp" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:text="@string/add_habit_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding= "20dp"/>

        <EditText android:id="@+id/habit_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/habit_date_hint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:id="@+id/cancel_button" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:layout_weight="1"
            android:id="@+id/ok_button" />

    </LinearLayout>
</LinearLayout>